feat: 엑셀다운로드 기능 추가

--- a/excel/src/main/resources/application.properties
+++ b/excel/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.security.enabled=false
 # Disable Spring Security auto-configuration so pages are accessible without login
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 server.port=8081
+# JPA / H2 settings for development
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+# Include stacktrace in error responses (useful for development)
+server.error.include-stacktrace=always
